--- a/gym-app/src/App.css
+++ b/gym-app/src/App.css
@@ -35,3 +35,10 @@
     transform: rotate(360deg);
   }
 }
+
+body {
+  background-image: url(""); /* Replace 'path_to_your_image.jpg' with the actual path to your image */
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding-bottom: 5%;
+}
